--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -92,15 +92,11 @@ body {
   }
 }
 
-
-.circle-wrapper {
-  position: relative;
-}
-
 .circle {
   position: relative;
-  border: 1px solid black;
+  border: 1px solid #9c9c9c;
   padding: 0;
+
   margin: 1em auto;
   width: 30em;
   height: 30em;
@@ -218,6 +214,20 @@ body {
   }
   li:nth-child(4) .text, li:nth-child(8) .text, li:nth-child(12) .text {
     background: #6dcff6;
+  }
+
+  &.headings {
+    position: absolute;
+    left: 22px;
+    top: -27px;
+    width: 36em;
+    height: 36em;
+    margin: -9px;
+    border: 0;
+
+    li .text {
+      background: transparent;
+    }
   }
 }
 
@@ -612,32 +622,6 @@ body {
   @extend .circle;
 }
 
-.circle {
-  position: relative;
-  border: 1px solid black;
-  padding: 0;
-  margin: 34px 20px;
-  width: 30em;
-  height: 30em;
-  border-radius: 50%;
-  list-style: none;
-  overflow: hidden;
-}
-
-.circle.headings {
-  position: absolute;
-  left: -13px;
-  top: -32px;
-  width: 36em;
-  height: 36em;
-  margin: -9px;
-  border: 0;
-
-  li .text {
-    background: transparent;
-  }
-}
-
 h2 {
   padding-bottom: 25px
 }
@@ -679,3 +663,127 @@ h5 {
 .circle12.headings {
   @extend .circle.headings;
 }
+
+//Ball design
+/*
+.ball {
+  display: inline-block;
+  width: 80%;
+  height: 80%;
+  margin: 0;
+  border-radius: 50%;
+  position: relative;
+  background: radial-gradient(circle at 137% 183%, #6f6f6f, #ffffff 80%, #e0e0e0 100%);
+}
+.ball:before {
+  content: "";
+  position: absolute;
+  background: radial-gradient(circle at 50% 120%, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0) 70%);
+  border-radius: 50%;
+  bottom: 2.5%;
+  left: 5%;
+  opacity: 0.6;
+  height: 100%;
+  width: 90%;
+  -webkit-filter: blur(5px);
+  z-index: 2;
+}
+.ball:after {
+  width: 100%;
+  height: 100%;
+  content: "";
+  position: absolute;
+  top: 5%;
+  left: 10%;
+  border-radius: 50%;
+  background: radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8) 14%, rgba(255, 255, 255, 0) 24%);
+  -webkit-transform: translateX(-80px) translateY(-90px) skewX(-20deg);
+  -moz-transform: translateX(-80px) translateY(-90px) skewX(-20deg);
+  -ms-transform: translateX(-80px) translateY(-90px) skewX(-20deg);
+  -o-transform: translateX(-80px) translateY(-90px) skewX(-20deg);
+  transform: translateX(-80px) translateY(-90px) skewX(-20deg);
+  -webkit-filter: blur(10px);
+}
+.ball .eight {
+  width: 90%;
+  height: 90%;
+  margin: 7% 10%;
+  background: #fff;
+  border-radius: 50%;
+  -webkit-transform: translateX(68px) translateY(-60px) skewX(15deg) skewY(2deg);
+  transform: translateX(-34px) translateY(-21px) skewX(4deg) skewY(-7deg);
+  position: absolute;
+}
+.ball .eight:before {
+  content: "";
+  display: block;
+  position: absolute;
+  text-align: center;
+  height: 80px;
+  width: 100px;
+  left: 50px;
+  margin-left: -40px;
+  top: 44px;
+  margin-top: -40px;
+  color: black;
+  font-family: Arial;
+  font-size: 90px;
+  line-height: 104px;
+}
+
+.shadow {
+  position: absolute;
+  width: 100%;
+  height: 80%;
+  background: radial-gradient(circle at 40% 40%, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1) 30%, rgba(0, 0, 0, 0) 50%);
+  -webkit-transform: rotateX(90deg) translateZ(-150px);
+  -moz-transform: rotateX(90deg) translateZ(-150px);
+  -ms-transform: rotateX(90deg) translateZ(-150px);
+  -o-transform: rotateX(90deg) translateZ(-150px);
+  transform: rotateX(90deg) translateZ(-160px);
+  z-index: -1;
+  right: -55px;
+}
+.stage {
+  width: 550px;
+  height: 550px;
+  display: inline-block;
+  margin: 20px;
+  -webkit-perspective: 1200px;
+  -moz-perspective: 1200px;
+  -ms-perspective: 1200px;
+  -o-perspective: 1200px;
+  perspective: 1200px;
+  -webkit-perspective-origin: 50% 50%;
+  -moz-perspective-origin: 50% 50%;
+  -ms-perspective-origin: 50% 50%;
+  -o-perspective-origin: 50% 50%;
+  perspective-origin: 50% 50%;
+  position: absolute;
+}
+
+.circle-wrapper {
+  -webkit-transform: translateX(68px) translateY(-60px) skewX(15deg) skewY(2deg);
+  transform: translateX(-34px) translateY(-21px) skewX(4deg) skewY(-7deg);
+  width: 336px;
+  height: 349px;
+  margin-left: 72px;
+  margin-top: 80px;
+  position: relative;
+}
+.circle {
+  margin: 13px 5px;
+  width: 24em;
+  height: 24em;/
+
+  &.headings {
+    left: -27px;
+    top: -25px;
+    width: 30em;
+    height: 29em;
+
+
+  }
+}
+
+*/
