--- a/app/styles/custom.scss
+++ b/app/styles/custom.scss
@@ -1,20 +1,55 @@
 body {
   background-color: #fff;
+
+  &>.container {
+    min-height: 600px;
+  }
 }
 
-h2, h3{
+h2 {
   margin-top: 10px;
 }
 
-#default-wheel-container {
-  margin-top: 25px;
-  background-color: #fff;
-  padding: 35px;
+.subtitle  {
+  margin-top: 10px;
+  margin-bottom: 35px;
 }
 
+#default-wheel-container {
+  background-color: #fff;
+  width:110%;
+  padding-right: 10%;
+  padding-left: 5%;
+  padding-top: 5%;
+}
+
+.new-circle-btn {
+  margin-top: -20px;
+  margin-bottom: 25px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+
+  button {
+    padding-top: 15px;
+
+    &:last-child {
+      color: #000 !important;
+    }
+  }
+}
+
+.circle-wrapper {
+  height: 470px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 25px;
+}
+/*
 .section-marks {
   margin-top: -45px;
 }
+*/
 
 .blue {
   background-color: #2196F3;
@@ -29,7 +64,7 @@ h2, h3{
 }
 
 .yellow {
-  background-color: #FFEB3B;
+  background-color: #FDD835;
 }
 
 .red {
@@ -38,15 +73,15 @@ h2, h3{
 
 .deep-purple {
   background-color: #673AB7;
-}  
+}
 
 .indigo {
   background-color: #3F51B5;
-}  
+}
 
 .lime {
   background-color: #CDDC39;
-}  
+}
 
 .orange {
   background-color: #FF9800;
@@ -54,7 +89,7 @@ h2, h3{
 
 .light-green {
   background-color: #8BC34A;
-} 
+}
 
 .progress-bar {
   &.yellow {
@@ -105,6 +140,8 @@ h2, h3{
 
 .marks-list {
   padding-left: 0;
+  min-height: 10px;
+  margin-bottom: 40px;
 
   li {
     font-weight: 700;
@@ -116,6 +153,7 @@ h2, h3{
   .mark {
     font-size: 1.5em;
     line-height: 0.8;
+    padding-bottom: 2px;
     font-weight: 400;
     float: right;
     color: white;
@@ -129,12 +167,6 @@ h2, h3{
   }
 }
 
-.custom-marks-list {
-  @extend .marks-list;
-
-  margin-bottom: 45px;
-}
-
 .form-group {
   margin: 0 0 5px;
 }
@@ -142,9 +174,6 @@ h2, h3{
 .circle {
   position: relative;
   border: 1px solid #9c9c9c;
-  padding: 0;
-
-  margin: 0 auto;
   width: 30em;
   height: 30em;
   border-radius: 50%;
@@ -170,10 +199,18 @@ h2, h3{
     -webkit-transform: skewY(60deg) rotate(15deg);
     -ms-transform: skewY(60deg) rotate(15deg);
     transform: skewY(60deg) rotate(15deg);
-    padding-top: 17px;
+    padding-top: 18px;
 
     span {
       display: block;
+
+      &:first-child {
+        padding-top: 9px;
+      }
+
+      &:last-child {
+        padding-bottom: 10px;
+      }
 
       a {
         display: block;
@@ -254,12 +291,10 @@ h2, h3{
 
   &.headings {
     position: absolute;
-    left: 34px;
-    top: -34px;
     width: 35em;
     height: 35em;
-    margin: -4px;
     border: 0;
+    top: -35px;
 
     li .text {
       background: transparent;
@@ -314,7 +349,7 @@ h2, h3{
     @extend .circle.headings;
 
     .text {
-      padding-top: 48px;
+      padding-top: 30px;
       left: -160px;
     }
 
@@ -356,7 +391,7 @@ h2, h3{
     text-align: center;
     -webkit-transform: skewY(31deg) rotate(29deg);
     transform: skewY(210deg) rotate(32deg);
-    padding-top: 7px; 
+    padding-top: 5px;
 
     span {
       padding: 1px 0;
@@ -490,71 +525,69 @@ h2, h3{
 
   .text {
     position: absolute;
-    left: -191px;
+    left: -179px;
     width: 200%;
-    height: 152%;
+    height: 149%;
     text-align: center;
     -webkit-transform: skewY(60deg) rotate(15deg);
-    transform: skewY(225deg) rotate(22deg);
-    padding-top: 15px;
+    transform: skewY(234deg) rotate(19deg);
+    padding-top: 44px;
 
     span {
-      padding: 1px 0;
+      padding: 0;
     }
   }
 
   li:first-child {
-    -webkit-transform: rotate(0deg) skewY(-225deg);
-    -ms-transform: rotate(0deg) skewY(-225deg);
-    transform: rotate(0deg) skewY(-225deg);
+    -webkit-transform: rotate(0deg) skewY(-234deg);
+    -ms-transform: rotate(0deg) skewY(-234deg);
+    transform: rotate(0deg) skewY(-234deg);
   }
   li:nth-child(2) {
-    -webkit-transform: rotate(36deg) skewY(-225deg);
-    -ms-transform: rotate(36deg) skewY(-225deg);
-    transform: rotate(36deg) skewY(-225deg);
+    -webkit-transform: rotate(36deg) skewY(-234deg);
+    -ms-transform: rotate(36deg) skewY(-234deg);
+    transform: rotate(36deg) skewY(-234deg);
   }
   li:nth-child(3) {
-    -webkit-transform: rotate(72deg) skewY(-225deg);
-    -ms-transform: rotate(72deg) skewY(-225deg);
-    transform: rotate(72deg) skewY(-225deg);
+    -webkit-transform: rotate(72deg) skewY(-234deg);
+    -ms-transform: rotate(72deg) skewY(-234deg);
+    transform: rotate(72deg) skewY(-234deg);
   }
   li:nth-child(4) {
-    -webkit-transform: rotate(108deg) skewY(-225deg);
-    -ms-transform: rotate(108deg) skewY(-225deg);
-    transform: rotate(108deg) skewY(-225deg);
+    -webkit-transform: rotate(108deg) skewY(-234deg);
+    -ms-transform: rotate(108deg) skewY(-234deg);
+    transform: rotate(108deg) skewY(-234deg);
   }
   li:nth-child(5) {
-    -webkit-transform: rotate(144deg) skewY(-225deg);
-    -ms-transform: rotate(144deg) skewY(-225deg);
-    transform: rotate(144deg) skewY(-225deg);
+    -webkit-transform: rotate(144deg) skewY(-234deg);
+    -ms-transform: rotate(144deg) skewY(-234deg);
+    transform: rotate(144deg) skewY(-234deg);
   }
   li:nth-child(6) {
-    -webkit-transform: rotate(180deg) skewY(-225deg);
-    -ms-transform: rotate(180deg) skewY(-225deg);
-    transform: rotate(180deg) skewY(-225deg);
+    -webkit-transform: rotate(180deg) skewY(-234deg);
+    -ms-transform: rotate(180deg) skewY(-234deg);
+    transform: rotate(180deg) skewY(-234deg);
   }
   li:nth-child(7) {
-    -webkit-transform: rotate(216deg) skewY(-225deg);
-    -ms-transform: rotate(216deg) skewY(-225deg);
-    transform: rotate(216deg) skewY(-225deg);
+    -webkit-transform: rotate(216deg) skewY(-234deg);
+    -ms-transform: rotate(216deg) skewY(-234deg);
+    transform: rotate(216deg) skewY(-234deg);
   }
   li:nth-child(8) {
-    -webkit-transform: rotate(252deg) skewY(-225deg);
-    -ms-transform: rotate(252deg) skewY(-225deg);
-    transform: rotate(252deg) skewY(-225deg);
+    -webkit-transform: rotate(252deg) skewY(-234deg);
+    -ms-transform: rotate(252deg) skewY(-234deg);
+    transform: rotate(252deg) skewY(-234deg);
   }
   li:nth-child(9) {
-    -webkit-transform: rotate(288deg) skewY(-225deg);
-    -ms-transform: rotate(288deg) skewY(-225deg);
-    transform: rotate(288deg) skewY(-225deg);
+    -webkit-transform: rotate(288deg) skewY(-234deg);
+    -ms-transform: rotate(288deg) skewY(-234deg);
+    transform: rotate(288deg) skewY(-234deg);
   }
   li:nth-child(10) {
-    -webkit-transform: rotate(324deg) skewY(-225deg);
-    -ms-transform: rotate(324deg) skewY(-225deg);
-    transform: rotate(324deg) skewY(-225deg);
+    -webkit-transform: rotate(324deg) skewY(-234deg);
+    -ms-transform: rotate(324deg) skewY(-234deg);
+    transform: rotate(324deg) skewY(-234deg);
   }
-
-  
 
   &.headings {
     @extend .circle.headings;
@@ -578,13 +611,20 @@ h2, h3{
 
 h5 {
   font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .export-btns {
   margin-top: 50px;
   margin-bottom: 50px;
-}
+  display: flex;
+  justify-content: center;
 
+  button {
+    width: 510px;
+  }
+}
 
 .marks-list {
   li {
@@ -592,7 +632,6 @@ h5 {
     padding: 0;
   }
 }
-
 
 .circle6.headings {
   @extend .circle.headings;
@@ -610,136 +649,6 @@ h5 {
   @extend .circle.headings;
 }
 
-//Ball design
-/* 
-.ball {
-  display: inline-block;
-  width: 80%;
-  height: 80%;
-  margin: 0;
-  border-radius: 50%;
-  position: relative;
-  background: radial-gradient(circle at 137% 183%, #6f6f6f, #ffffff 80%, #e0e0e0 100%);
-}
-.ball:before {
-  content: "";
-  position: absolute;
-  background: radial-gradient(circle at 50% 120%, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0) 70%);
-  border-radius: 50%;
-  bottom: 2.5%;
-  left: 5%;
-  opacity: 0.6;
-  height: 100%;
-  width: 90%;
-  -webkit-filter: blur(5px);
-  z-index: 2;
-}
-.ball:after {
-  width: 100%;
-  height: 100%;
-  content: "";
-  position: absolute;
-  top: 5%;
-  left: 10%;
-  border-radius: 50%;
-  background: radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8) 14%, rgba(255, 255, 255, 0) 24%);
-  -webkit-transform: translateX(-80px) translateY(-90px) skewX(-20deg);
-  -moz-transform: translateX(-80px) translateY(-90px) skewX(-20deg);
-  -ms-transform: translateX(-80px) translateY(-90px) skewX(-20deg);
-  -o-transform: translateX(-80px) translateY(-90px) skewX(-20deg);
-  transform: translateX(-80px) translateY(-90px) skewX(-20deg);
-  -webkit-filter: blur(10px);
-}
-.ball .eight {
-  width: 90%;
-  height: 90%;
-  margin: 7% 10%;
-  background: #fff;
-  border-radius: 50%;
-  -webkit-transform: translateX(68px) translateY(-60px) skewX(15deg) skewY(2deg);
-  transform: translateX(-34px) translateY(-21px) skewX(4deg) skewY(-7deg);
-  position: absolute;
-}
-.ball .eight:before {
-  content: "";
-  display: block;
-  position: absolute;
-  text-align: center;
-  height: 80px;
-  width: 100px;
-  left: 50px;
-  margin-left: -40px;
-  top: 44px;
-  margin-top: -40px;
-  color: black;
-  font-family: Arial;
-  font-size: 90px;
-  line-height: 104px;
-}
-
-.shadow {
-  position: absolute;
-  width: 100%;
-  height: 80%;
-  background: radial-gradient(circle at 40% 40%, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1) 30%, rgba(0, 0, 0, 0) 50%);
-  -webkit-transform: rotateX(90deg) translateZ(-150px);
-  -moz-transform: rotateX(90deg) translateZ(-150px);
-  -ms-transform: rotateX(90deg) translateZ(-150px);
-  -o-transform: rotateX(90deg) translateZ(-150px);
-  transform: rotateX(90deg) translateZ(-160px);
-  z-index: -1;
-  right: -55px;
-}
-.stage {
-  width: 550px;
-  height: 550px;
-  display: inline-block;
-  margin: 20px;
-  -webkit-perspective: 1200px;
-  -moz-perspective: 1200px;
-  -ms-perspective: 1200px;
-  -o-perspective: 1200px;
-  perspective: 1200px;
-  -webkit-perspective-origin: 50% 50%;
-  -moz-perspective-origin: 50% 50%;
-  -ms-perspective-origin: 50% 50%;
-  -o-perspective-origin: 50% 50%;
-  perspective-origin: 50% 50%;
-  position: absolute;
-}
-
-.circle-wrapper {
-  -webkit-transform: translateX(68px) translateY(-60px) skewX(15deg) skewY(2deg);
-  transform: translateX(-34px) translateY(-21px) skewX(4deg) skewY(-7deg);
-  width: 336px;
-  height: 349px;
-  margin-left: 72px;
-  margin-top: 80px;
-  position: relative;
-}
-.circle {
-  margin: 13px 5px;
-  width: 24em;
-  height: 24em;
-
-  &.headings {
-    left: -27px;
-    top: -25px;
-    width: 30em;
-    height: 29em;
-  }
-} */
-
-
-
 .alert-danger {
   margin: 5px 55px 55px;
-}
-
-.new-circle-btn {
-  margin: -25px 45px 45px 55px;
-
-  .btn-info {
-      color: #000 !important;
-  }
 }
