--- a/app/styles/custom.scss
+++ b/app/styles/custom.scss
@@ -654,3 +654,12 @@ h5 {
 .alert-danger {
   margin: 5px 55px 55px;
 }
+
+.active-span {
+  background: rgba(0,0,0, 0.6);
+  font-weight: 700;
+
+  a {
+    color: #fff;
+  }
+}
